@@ -1,24 +1,24 @@
 package ru.yandex.practicum.catsgram.controller;
 
+import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.*;
 import ru.yandex.practicum.catsgram.exception.ConditionsNotMetException;
 import ru.yandex.practicum.catsgram.exception.NotFoundException;
 import ru.yandex.practicum.catsgram.model.Post;
-import ru.yandex.practicum.catsgram.model.User;
-import ru.yandex.practicum.catsgram.service.UserService;
+import ru.yandex.practicum.catsgram.service.PostService;
 
 import java.time.Instant;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Comparator;
+import java.util.List;
 
 @RestController
 @RequestMapping("/posts")
+@RequiredArgsConstructor
 public class PostController {
-    private final Map<Long, Post> posts = new HashMap<>();
-    private final UserService userService;
-
-    public PostController(UserService userService) {
-        this.userService = userService;
-    }
+    private final PostService postService;
 
     @GetMapping
     public Collection<Post> findAll(
@@ -30,8 +30,8 @@ public class PostController {
             throw new IllegalArgumentException("Параметр size должен быть больше нуля");
         }
 
-        // Преобразуем Map в список для сортировки
-        List<Post> sortedPosts = new ArrayList<>(posts.values());
+        // Создаем новый изменяемый список из данных, возвращаемых PostService
+        List<Post> sortedPosts = new ArrayList<>(postService.findAll());
 
         // Сортируем по дате создания
         if ("asc".equalsIgnoreCase(sort)) {
@@ -44,7 +44,7 @@ public class PostController {
 
         // Применяем пагинацию
         if (from >= sortedPosts.size()) {
-            return Collections.emptyList(); // Если начальный индекс выходит за пределы списка
+            return List.of(); // Пустой список, если начальный индекс выходит за пределы
         }
         int toIndex = Math.min(from + size, sortedPosts.size());
         return sortedPosts.subList(from, toIndex);
@@ -52,60 +52,25 @@ public class PostController {
 
     @GetMapping("/{id}")
     public Post findById(@PathVariable Long id) {
-        Post post = posts.get(id);
-        if (post == null) {
-            throw new NotFoundException("Пост с id = " + id + " не найден");
-        }
-        return post;
+        return postService.findById(id)
+                .orElseThrow(() -> new NotFoundException("Пост с id = " + id + " не найден"));
     }
 
     @PostMapping
+    @ResponseStatus(HttpStatus.CREATED)
     public Post create(@RequestBody Post post) {
-        // Проверяем, что описание не пустое
         if (post.getDescription() == null || post.getDescription().isBlank()) {
             throw new ConditionsNotMetException("Описание не может быть пустым");
         }
-
-        // Проверяем существование автора поста
-        Long authorId = post.getAuthorId();
-        if (authorId == null) {
-            throw new ConditionsNotMetException("Идентификатор автора не может быть null");
-        }
-
-        Optional<User> author = userService.findUserById(authorId);
-        if (author.isEmpty()) {
-            throw new ConditionsNotMetException("Автор с id = " + authorId + " не найден");
-        }
-
-        // Формируем дополнительные данные
-        post.setId(getNextId());
         post.setPostDate(Instant.now());
-        posts.put(post.getId(), post);
-        return post;
+        return postService.create(post);
     }
 
     @PutMapping
-    public Post update(@RequestBody Post newPost) {
-        if (newPost.getId() == null) {
+    public Post update(@RequestBody Post updatedPost) {
+        if (updatedPost.getId() == null) {
             throw new ConditionsNotMetException("Id должен быть указан");
         }
-        if (posts.containsKey(newPost.getId())) {
-            Post oldPost = posts.get(newPost.getId());
-            if (newPost.getDescription() == null || newPost.getDescription().isBlank()) {
-                throw new ConditionsNotMetException("Описание не может быть пустым");
-            }
-            oldPost.setDescription(newPost.getDescription());
-            return oldPost;
-        }
-        throw new NotFoundException("Пост с id = " + newPost.getId() + " не найден");
-    }
-
-    private long getNextId() {
-        long currentMaxId = posts.keySet()
-                .stream()
-                .mapToLong(id -> id)
-                .max()
-                .orElse(0);
-        return ++currentMaxId;
+        return postService.update(updatedPost);
     }
 }
